--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Sayt-vizitka/img/03.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/02.png" type="image/x-icon">
     <meta name="keywords"content="Створення сайтів, сайт, сайт візитка, сайт для бізнесу, бізнес сайт, 
     сайт для бизнеса,верстака сайта, создание сайтов, сайты визитки, интернет 
     магазины, часный сайт сделать, сделать сайт" />
