--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         <img src="img/0002.png" alt="foto" width="150px" height="150px">
                                     </div>
                                     <h2 class="text__title">
-                                        Фнтернет магазин
+                                        Інтернет магазин
                                     </h2>
                                     <p class="opis">
                                         Термін розробки: 3-10 дні
