--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="keywords"content="Створення сайтів, сайт, сайт візитка, сайт для бізнесу, бізнес сайт, 
     сайт для бизнеса,верстака сайта, создание сайтов, сайты визитки, интернет 
     магазины, часный сайт сделать, сделать сайт" />
+<!--     <link rel="canonical" href="https://example.com/dresses/green-dresses" /> -->
+<!--     <link rel="stylesheet" href="http://example.com/css/main.css"> -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Створення сайтів для бізнесу</title>
