--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/02.png" type="image/x-icon">
-    <meta name="keywords"content="Створення сайтів, сайт, сайт візитка, сайт для бізнесу, бізнес сайт, 
-    сайт для бизнеса,верстака сайта, создание сайтов, сайты визитки, интернет 
+    <meta name="keywords"content="Створення сайтів, сайт, [сайт візитка[, сайт для бізнесу, бізнес сайт, 
+    сайт для бизнеса,[верстака сайта[, создание сайтов, сайты визитки, интернет 
     магазины, часный сайт сделать, сделать сайт" />
 <!--     <link rel="canonical" href="https://example.com/dresses/green-dresses" /> -->
 <!--     <link rel="stylesheet" href="http://example.com/css/main.css"> -->
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Створення сайтів для бізнесу</title>
     <meta name="description" content="Сайт для бізнесу ✔️ 
-        Створення сайтів для бізнесу ✔️ Створи свій бізнес більш відомим.
-         Створення сайтів, візиток сайти, інтернетмагазинів.✔️" />
+        [Створення сайтів для бізнесу] ✔️ Створи свій бізнес більш відомим.
+         Створення сайтів, візиток сайти, [інтернет-магазин].✔️" />
 </head>
 
 <body>
