--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <meta name="keywords"content="Створення сайтів, сайт, [сайт візитка[, сайт для бізнесу, бізнес сайт, 
     сайт для бизнеса,[верстака сайта[, создание сайтов, сайты визитки, интернет 
     магазины, часный сайт сделать, сделать сайт" />
-<!--     <link rel="canonical" href="https://example.com/dresses/green-dresses" /> -->
-<!--     <link rel="stylesheet" href="http://example.com/css/main.css"> -->
+    <?xml version="1.0" encoding="UTF-8"?>
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+  <url>
+    <loc>https://site-bizz.fun/foo.html</loc>
+    <lastmod>2022-06-04</lastmod>
+  </url>
+</urlset>
+    <link rel="canonical" href="https://site-bizz.fun/dresses/green-dresses" />
+    <link rel="stylesheet" href="http://site-bizz.fun/css/main.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Створення сайтів для бізнесу</title>
