--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="keywords"content="Створення сайтів, сайт, [сайт візитка[, сайт для бізнесу, бізнес сайт, 
     сайт для бизнеса,[верстака сайта[, создание сайтов, сайты визитки, интернет 
     магазины, часный сайт сделать, сделать сайт" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2505822162119538"
+     crossorigin="anonymous"></script>
     <link rel="canonical" href="https://site-bizz.fun/dresses/green-dresses" />
     <link rel="stylesheet" href="http://site-bizz.fun/css/main.css">
     <link rel="stylesheet" href="css/reset.css">
