--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="description" content="Сайт для бізнесу ✔️ 
         [Створення сайтів для бізнесу] ✔️ Створи свій бізнес більш відомим.
          Створення сайтів, візиток сайти, [інтернет-магазин].✔️" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2505822162119538"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
