--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
             </div>
         </footer>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2505822162119538"
+     crossorigin="anonymous"></script>
+<!-- bizz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2505822162119538"
+     data-ad-slot="4725143601"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 
 </html>
