--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2505822162119538"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-2505822162119538"
+     data-ad-slot="4234189016"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </body>
