--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
     магазины, часный сайт сделать, сделать сайт" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2505822162119538"
      crossorigin="anonymous"></script>
-    <link rel="canonical" href="https://site-bizz.fun/dresses/green-dresses" />
+    <link rel="canonical" href="hhttps://site-bizz.fun/"/>
+    <link rel="canonical" href="https://github.com/Aleksandr210890/Profi/" />
+    <link rel="alternate" media="only screen and (max-width: 1000px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 900px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 750px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 650px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 600px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 550px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 500px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 400px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 370px)"  href="https://site-bizz.fun/">
+    <link rel="alternate" media="only screen and (max-width: 300px)"  href="https://site-bizz.fun/">
     <link rel="stylesheet" href="http://site-bizz.fun/css/main.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
